--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,8 +22,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-}
+} 
 #test{
+  position: absolute;
+  width: 100%;
   background-color: rgba(0,0,0,0.7);
   color: white;
   border: none;
