--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,8 +24,9 @@
   height: 100%;
 } 
 #test{
-  position: absolute;
+  position: sticky;
   width: 100%;
+  height: 100%;
   background-color: rgba(0,0,0,0.7);
   color: white;
   border: none;
